addind styles and media query to the navbar

--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -9,11 +9,12 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="navbar.css" />
     <title>Document</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand nav-title" href="#">24H</a>
+      <a class="navbar-title" href="#">24H</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -26,7 +27,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav navbar-content">
           <a class="nav-link text-right" href="#"
             >Accueil <span class="sr-only">(current)</span></a
           >
