--- a/ticketing/ticketing.html
+++ b/ticketing/ticketing.html
@@ -10,6 +10,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="ticketing.css" />
+    <link
+    href=“https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap”
+    rel=“stylesheet”>
     <title>Document</title>
   </head>
   <body>
