--- a/card.html
+++ b/card.html
@@ -14,7 +14,7 @@
         </div>
              
         <div class="cardPar">
-            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit doloremque quaerat ipsa repellendus quos iusto asperiores, velit optio praesentium cumque temporibus unde ducimus quod laborum harum similique alias placeat delectus.</p>
+            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit doloremque quaerat ipsa repellendus quos iusto...</p>
         </div>
             
         <div class="cardButton">
