--- a/home.html
+++ b/home.html
@@ -41,6 +41,7 @@
         </div>
       </div>
     </nav>
+
     <!-- banner -->
     <header>
       <img
@@ -49,6 +50,41 @@
         alt="Le virage Dunlop"
       />
     </header>
+
+    <!-- banner -->
+    <form action="" method="post">
+      <p class="form-title">Billeterie</p>
+      <div class="form-container">
+        <div class="form-group-container">
+          <div class="form-group">
+            <label class="form-label" for="adult">Billet adulte</label>
+            <input
+              type="number"
+              class="form-input"
+              id="adult"
+              value="1"
+              max="6"
+            />
+            <p class="form-price">x 60€</p>
+          </div>
+          <div class="form-group">
+            <label class="form-label" for="child">Billet enfant</label>
+            <input
+              type="number"
+              class="form-input"
+              id="child"
+              value="1"
+              max="3"
+            />
+            <p class="form-price">x 40€</p>
+          </div>
+        </div>
+        <div class="form-group-container">
+          <p class="total">TOTAL: 1000€</p>
+          <button type="submit" class="form-submit">Payer</button>
+        </div>
+      </div>
+    </form>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
