removing ticketing and navbar folders

--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
       />
     </header>
 
-    <!-- banner -->
+    <!-- ticketing -->
     <form action="" method="post">
       <p class="form-title">Billeterie</p>
       <div class="form-container">
