--- a/home.html
+++ b/home.html
@@ -85,6 +85,12 @@
         </div>
       </div>
     </form>
+
+    <!-- news -->
+
+    <section>
+      <p class="news-title">Actualités</p>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
