--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- navbar  -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <a class="navbar-title" href="#">24H</a>
       <button
         class="navbar-toggler"
@@ -44,53 +44,73 @@
 
     <!-- banner -->
     <header>
-      <img
-        class="header-img"
-        src="./images/banniere.jpg"
-        alt="Le virage Dunlop"
-      />
+      <img class="header-img" src="./images/race.jpg" alt="Le virage Dunlop" />
     </header>
 
     <!-- ticketing -->
-    <form action="" method="post">
-      <p class="form-title">Billeterie</p>
-      <div class="form-container">
-        <div class="form-group-container">
-          <div class="form-group">
-            <label class="form-label" for="adult">Billet adulte</label>
-            <input
-              type="number"
-              class="form-input"
-              id="adult"
-              value="1"
-              max="6"
-            />
-            <p class="form-price">x 60€</p>
+    <section>
+      <form action="" method="post">
+        <p class="form-title">Billeterie</p>
+        <div class="form-container">
+          <div class="form-group-container">
+            <div class="form-group">
+              <label class="form-label" for="adult">Billet adulte</label>
+              <input
+                type="number"
+                class="form-input"
+                id="adult"
+                value="1"
+                max="6"
+              />
+              <p class="form-price">x 60€</p>
+            </div>
+            <div class="form-group">
+              <label class="form-label" for="child">Billet enfant</label>
+              <input
+                type="number"
+                class="form-input"
+                id="child"
+                value="1"
+                max="3"
+              />
+              <p class="form-price">x 40€</p>
+            </div>
           </div>
-          <div class="form-group">
-            <label class="form-label" for="child">Billet enfant</label>
-            <input
-              type="number"
-              class="form-input"
-              id="child"
-              value="1"
-              max="3"
-            />
-            <p class="form-price">x 40€</p>
+          <div class="form-group-container">
+            <p class="total">TOTAL: 1000€</p>
+            <button type="submit" class="form-submit">Payer</button>
           </div>
         </div>
-        <div class="form-group-container">
-          <p class="total">TOTAL: 1000€</p>
-          <button type="submit" class="form-submit">Payer</button>
-        </div>
-      </div>
-    </form>
+      </form>
+    </section>
 
     <!-- news -->
-
-    <section>
+    <section class="news">
       <p class="news-title">Actualités</p>
+      <div class="news-articles">
+        <article>card1</article>
+        <article>card2</article>
+        <article>card3</article>
+      </div>
     </section>
+
+    <!-- questions -->
+    <section class="questions">
+      <a href="contacts.html">
+        <button class="questions-button">
+          UNE QUESTION ?
+        </button>
+      </a>
+    </section>
+
+    <!-- teaser -->
+    <div class="embed-responsive embed-responsive-21by9">
+      <iframe
+        class="embed-responsive-item"
+        src="https://www.youtube.com/embed/8Wb62lwOjfs?rel=0"
+        allowfullscreen
+      ></iframe>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
