--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta description="Les 24H du Mans" />
+    <meta author="Brice Mezerette, Anais Cotinet, Loic Bodolec, Nicolas Mercier"/>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style-contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b168343220.js" crossorigin="anonymous"></script>
@@ -12,13 +20,13 @@
     <header>
         <nav></nav>
     </header>
-    <section>
+    <section class=" blocContact">
         <h2>CONTACT</h2>
         <p class="introContact">Une question ? Remplissez le formulaire ci-dessous et nous vous répondrons dans les meilleurs délais !</p>
         <form class="contactForm">
             <label for="contactName">Nom, prénom :</label>
             <input id="contactName" type="text" name="name" placeholder="John Doe"/>
-            <label for= "contactEmail">Email</label>
+            <label for= "contactEmail">Email :</label>
             <input id="contactEmail" type="email" name="email" placeholder="johndoe@mail.com"/>
             <label for="contactMessage">Message :</label>
             <textarea name="message" id="contactMessage" placeholder="Votre message..."></textarea>
@@ -45,6 +53,7 @@
                 <img class="cardHotelImg" src="images/hotel_room1.png" alt="hotel 1">
                 <div class="cardHotelInfo">
                     <p>Brit Hôtel Le Cottage</p>
+                    <a class="infoButton" href="https://hotel-le-mans-cottage.brithotel.fr" target="_blank">Voir le site web</a>
                 </div >
                 <div class="cardHotelIcons">
                     <i class="fas fa-utensils fa-sm"></i>
@@ -56,6 +65,7 @@
                 <img class="cardHotelImg" src="images/hotel_room2.png" alt="hotel 2">
                 <div class="cardHotelInfo">
                     <p>Cabane du circuit</p>
+                    <a class="infoButton" href="https://hotel-le-mans-cottage.brithotel.fr" target="_blank">Voir le site web</a>
                 </div>
                 <div class="cardHotelIcons">
                     <i class="fas fa-utensils fa-sm"></i>
@@ -67,6 +77,7 @@
                 <img class="cardHotelImg" src="images/hotel_room1.png" alt="hotel 3">
                 <div class="cardHotelInfo">
                     <p>Cabane du circuit</p>
+                    <a class="infoButton" href="https://hotel-le-mans-cottage.brithotel.fr" target="_blank">Voir le site web</a>
                 </div>
                 <div class="cardHotelIcons">
                     <i class="fas fa-utensils fa-sm"></i>
