adding animations and arrow anchor

--- a/home.html
+++ b/home.html
@@ -45,10 +45,16 @@
     <!-- banner -->
     <header>
       <img class="header-img" src="./images/race.jpg" alt="Le virage Dunlop" />
+      <h1 class="header-text">Les 24H du Mans</h1>
+      <span>
+        <a href="#ticketing" class="arrow">
+          <i class="fas fa-arrow-circle-down fa-3x bounce"></i>
+        </a>
+      </span>
     </header>
 
     <!-- ticketing -->
-    <section>
+    <section id="ticketing">
       <form action="" method="post">
         <p class="form-title">Billeterie</p>
         <div class="form-container">
@@ -111,6 +117,11 @@
         allowfullscreen
       ></iframe>
     </div>
+    <script src="index.js"></script>
+    <script
+      src="https://kit.fontawesome.com/53b1999fd0.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
