--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,8 @@
     <header>
         <nav></nav>
     </header>
+
+    <!-- contact form -->
     <section class=" blocContact">
         <h2>CONTACT</h2>
         <p class="introContact">Une question ? Remplissez le formulaire ci-dessous et nous vous répondrons dans les meilleurs délais !</p>
@@ -33,6 +35,8 @@
             <input type="submit" name="send" id="contactSend" value="ENVOYER"/>
         </form>
     </section>
+
+     <!-- location : map & info -->
     <section class="blocLocation">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2671.985463080106!2d0.2056818156426801!3d47.95600517920942!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e28fad5242c195%3A0xe9ae326c6c02c174!2sCircuit%20des%2024%20Heures%20du%20Mans!5e0!3m2!1sfr!2sfr!4v1601459914712!5m2!1sfr!2sfr" width="100%" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <section class="locationContainer">
@@ -46,6 +50,7 @@
              </div>
          </section>
     </section>
+    <!-- hotel cards -->
     <section class="blocHotel">
         <h2>SE LOGER</h2>
         <section class="allCardHotel">
@@ -53,7 +58,7 @@
                 <img class="cardHotelImg" src="images/hotel_room1.png" alt="hotel 1">
                 <div class="cardHotelInfo">
                     <p>Brit Hôtel Le Cottage</p>
-                    <a class="infoButton" href="https://hotel-le-mans-cottage.brithotel.fr" target="_blank">Voir le site web</a>
+                    <button class="infoButton" onclick="window.open('https://hotel-le-mans-cottage.brithotel.fr');">Voir le site web</button>
                 </div >
                 <div class="cardHotelIcons">
                     <i class="fas fa-utensils fa-sm"></i>
@@ -65,7 +70,7 @@
                 <img class="cardHotelImg" src="images/hotel_room2.png" alt="hotel 2">
                 <div class="cardHotelInfo">
                     <p>Cabane du circuit</p>
-                    <a class="infoButton" href="https://hotel-le-mans-cottage.brithotel.fr" target="_blank">Voir le site web</a>
+                    <button class="infoButton" onclick="window.open('https://hotel-le-mans-cottage.brithotel.fr');">Voir le site web</button>
                 </div>
                 <div class="cardHotelIcons">
                     <i class="fas fa-utensils fa-sm"></i>
@@ -77,7 +82,7 @@
                 <img class="cardHotelImg" src="images/hotel_room1.png" alt="hotel 3">
                 <div class="cardHotelInfo">
                     <p>Cabane du circuit</p>
-                    <a class="infoButton" href="https://hotel-le-mans-cottage.brithotel.fr" target="_blank">Voir le site web</a>
+                    <button class="infoButton" onclick="window.open('https://hotel-le-mans-cottage.brithotel.fr');">Voir le site web</button>
                 </div>
                 <div class="cardHotelIcons">
                     <i class="fas fa-utensils fa-sm"></i>
