--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@
       <p class="news-title">Actualités</p>
       <div class="news-articles">
         <article class="article">
-          <div class="card" style="width: 18rem;">
+          <div class="card">
             <img
               src="./images/race4.jpg"
               class="card-img-top"
@@ -113,7 +113,7 @@
           </div>
         </article>
         <article class="article">
-          <div class="card" style="width: 18rem;">
+          <div class="card">
             <img
               src="./images/race4.jpg"
               class="card-img-top"
@@ -130,7 +130,7 @@
           </div>
         </article>
         <article class="article">
-          <div class="card" style="width: 18rem;">
+          <div class="card">
             <img
               src="./images/race4.jpg"
               class="card-img-top"
