change bttn  titles and result ticketing

--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
     <!-- ticketing -->
     <section id="ticketing">
       <form action="" method="post">
-        <p class="form-title">Billeterie</p>
+        <div class="bloc-form-title"><h2 class="form-title">BILLETERIE</h2></div>
         <div class="form-container">
           <div class="form-group-container">
             <div class="form-group">
@@ -83,7 +83,10 @@
             </div>
           </div>
           <div class="form-group-container">
-            <p class="total">TOTAL: 1000€</p>
+            <div class="bloc-total">
+              <p class="total">TOTAL:</p>
+              <p class="result">1000€</p>
+            </div>
             <button type="submit" class="form-submit">Payer</button>
           </div>
         </div>
@@ -92,7 +95,7 @@
 
     <!-- news -->
     <section class="news">
-      <p class="news-title">Actualités</p>
+      <h2 class="news-title">ACTUALITÉS</h2>
       <div class="news-articles">
         <article class="article">
           <div class="card">
@@ -105,8 +108,7 @@
               <h5 class="card-title">lorem ipsum</h5>
               <p class="card-text">
                 Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem
-                ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum
-                dolor sit amet
+                ipsum dolor sit amet Lorem ipsum dolor sit amet
               </p>
               <a href="#" class="btn news-btn">Voir plus</a>
             </div>
