adding logo for desktop version

--- a/home.html
+++ b/home.html
@@ -190,10 +190,17 @@
         <a href="https://twitter.com/?lang=fr">
           <i class="fab fa-twitter fa-3x footerItem"></i>
         </a>
+        <a href="https://www.facebook.com/">
+          <i class="fab fa-facebook-f fa-3x footerItem"></i>
+        </a>
       </ul>
 
-      <div class="footerCopyright">
-        <p>Copyright © 2020 Bolidezzz</p>
+      <div class="footerLogo">
+        <img
+          class="footerLogoImage"
+          src="https://placekitten.com/232/300"
+          alt="logo"
+        />
       </div>
     </footer>
     <script src="index.js"></script>
