--- a/history.html
+++ b/history.html
@@ -45,7 +45,7 @@
     <!-- banner -->
     <header>
       <img class="header-img" src="./images/circuit_24h_du_mans.jpg" alt="Le circuit des 24h du Mans" />
-      <h1 class="header-text">L'histoire des 24h du Mans</h1>
+      <h1 class="header-text">L'histoire des 24h</h1>
     </header>
 
 
@@ -91,9 +91,8 @@
 
       <div class="bloc-5">
       <h2>Les innovations techniques</h2>
-      <p>La course a servi d'expérimentation à de nombreux projets. Depuis le début, les équipes concurrentes ont innové.Le frein à disque, la jante, l'aérodynamisme, le pneu à carcasse radiale, le phare à LEDs, puis au laser, font partie des innovations testées au Mans.</p> 
-      <p>Différents types de moteurs ont été utilisés pour gagner autant en vitesse qu'en consommation. La suralimentation commença dès 1929, longtemps avant la turbo compression, en 1974.</p>
-      <p>En 1963, une auto expérimenta une turbine à gaz, alors qu'en 1970 était présenté le moteur rotatif. Les freins ont fait l'objet de nombreux essais, et les phares antibrouillard furent inventés pour la course.</p>
+      <p>La course a servi d'expérimentation à de nombreux projets. Depuis le début, les équipes concurrentes ont innové. Le frein à disque, la jante, l'aérodynamisme, le pneu à carcasse radiale, le phare à LEDs, puis au laser, font partie des innovations testées au Mans.</p> 
+      <p>Différents types de moteurs ont été utilisés pour gagner autant en vitesse qu'en consommation. La suralimentation commença dès 1929, longtemps avant la turbo compression, en 1974. En 1963, une auto expérimenta une turbine à gaz, alors qu'en 1970 était présenté le moteur rotatif.</p>
       <p>En septembre 2018, dans la continuité des voitures hybrides apparues en 2012, naît le projet Mission H24 qui s'est donné pour objectif de faire courir une voiture fonctionnant intégralement à l'hydrogène en 2024.</p>
       <p>Par ailleurs, la ligne droite des Hunaudières est décrétée « laboratoire national » en 1932 par les Ponts et chaussées et, en 1933, la ligne médiane des routes françaises y est testée. </p>
       </div>
