--- a/home.html
+++ b/home.html
@@ -174,7 +174,7 @@
     </div>
 
     <!-- footer -->
-    <footer>
+    <footer class="bg-dark">
       <ul class="footerMenu">
         <li><a class="footerItem" href="home.html">Accueil</a></li>
         <li class="footerItemSeparator">|</li>
