--- a/home.html
+++ b/home.html
@@ -35,9 +35,9 @@
           <a class="nav-link text-right" href="#"
             >Accueil <span class="sr-only">(current)</span></a
           >
-          <a class="nav-link text-right" href="#">Histoire</a>
-          <a class="nav-link text-right" href="#">Edition 2020</a>
-          <a class="nav-link text-right" href="#">Infos pratiques</a>
+          <a class="nav-link text-right" href="history.html">Histoire</a>
+          <a class="nav-link text-right" href="edition.html">Edition 2020</a>
+          <a class="nav-link text-right" href="contact.html">Infos pratiques</a>
         </div>
       </div>
     </nav>
@@ -114,7 +114,7 @@
                 Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem
                 ipsum dolor sit amet Lorem ipsum dolor sit amet
               </p>
-              <a href="#" class="btn news-btn">Voir plus</a>
+              <a href="" class="btn news-btn">Voir plus</a>
             </div>
           </div>
         </article>
@@ -131,7 +131,7 @@
                 Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem
                 ipsum dolor sit amet Lorem ipsum dolor sit amet
               </p>
-              <a href="#" class="btn news-btn">Voir plus</a>
+              <a href="" class="btn news-btn">Voir plus</a>
             </div>
           </div>
         </article>
@@ -148,7 +148,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing Lorem ipsum
                 dolor sit amet, consectetur adipiscing
               </p>
-              <a href="#" class="btn news-btn">Voir plus</a>
+              <a href="" class="btn news-btn">Voir plus</a>
             </div>
           </div>
         </article>
@@ -157,7 +157,7 @@
 
     <!-- questions -->
     <section class="questions">
-      <a href="contacts.html">
+      <a href="contact.html">
         <button class="questions-button">
           UNE QUESTION ?
         </button>
@@ -178,11 +178,11 @@
       <ul class="footerMenu">
         <li><a class="footerItem" href="home.html">Accueil</a></li>
         <li class="footerItemSeparator">|</li>
-        <li><a class="footerItem" href="#"> Histoire</a></li>
+        <li><a class="footerItem" href="history.html"> Histoire</a></li>
         <li class="footerItemSeparator">|</li>
-        <li><a class="footerItem" href="#"> Edition 2020</a></li>
+        <li><a class="footerItem" href="edition.html"> Edition 2020</a></li>
         <li class="footerItemSeparator">|</li>
-        <li><a class="footerItem" href="#"> Infos pratiques</a></li>
+        <li><a class="footerItem" href="contact.html"> Infos pratiques</a></li>
       </ul>
 
       <ul class="footerSocialNetworks">
