image de la bannière

--- a/history.html
+++ b/history.html
@@ -44,7 +44,7 @@
 
     <!-- banner -->
     <header>
-      <img class="header-img" src="./images/histoire_bannière.jpg" alt="Le circuit des 24h du Mans" />
+      <img class="header-img" src="./images/history_bannière.jpg" alt="Le circuit des 24h du Mans" />
       <h1 class="header-title">L'histoire des 24h</h1>
     </header>
 
