--- a/html/home.html
+++ b/html/home.html
@@ -12,8 +12,8 @@
     <link
     href=“https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap”
     rel=“stylesheet”>
-    <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/style-home.css" />
+    <title>Accueil | 24H</title>
   </head>
   <body>
     <!-- navbar  -->
@@ -106,7 +106,7 @@
         <article class="article">
           <div class="card">
             <img
-              src="./images/race4.jpg"
+              src="../images/race4.jpg"
               class="card-img-top"
               alt="Actualités 1"
             />
@@ -123,7 +123,7 @@
         <article class="article">
           <div class="card">
             <img
-              src="./images/race4.jpg"
+              src="../images/race4.jpg"
               class="card-img-top"
               alt="Actualités 2"
             />
@@ -140,7 +140,7 @@
         <article class="article">
           <div class="card">
             <img
-              src="./images/race4.jpg"
+              src="../images/race2.jpg"
               class="card-img-top"
               alt="Actualités 3"
             />
@@ -207,7 +207,7 @@
         />
       </div>
     </footer>
-    <script src="index.js"></script>
+    <script src="./js/home.js"></script>
     <script
       src="https://kit.fontawesome.com/53b1999fd0.js"
       crossorigin="anonymous"
