--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,33 @@
     <title>Contact | 24H</title>
 </head>
 <body>
-    <header>
-        <nav></nav>
-    </header>
-
+ <!-- navbar  -->
+ <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-title" href="#">24H</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav navbar-content">
+        <a class="nav-link text-right" href="#"
+          >Accueil <span class="sr-only">(current)</span></a
+        >
+        <a class="nav-link text-right" href="#">Histoire</a>
+        <a class="nav-link text-right" href="#">Edition 2020</a>
+        <a class="nav-link text-right" href="#">Infos pratiques</a>
+      </div>
+    </div>
+  </nav>
     <!-- contact form -->
+    <main>
     <section class=" blocContact">
         <h2>CONTACT</h2>
         <p class="introContact">Une question ? Remplissez le formulaire ci-dessous et nous vous répondrons dans les meilleurs délais !</p>
@@ -92,7 +114,52 @@
             </section>
          </section>
     </section>
-    <footer>  
-    </footer>
+    </main>
+    <footer>
+        <ul class="footerMenu">
+          <li><a class="footerItem" href="home.html">Accueil</a></li>
+          <li class="footerItemSeparator">|</li>
+          <li><a class="footerItem" href="#"> Histoire</a></li>
+          <li class="footerItemSeparator">|</li>
+          <li><a class="footerItem" href="#"> Edition 2020</a></li>
+          <li class="footerItemSeparator">|</li>
+          <li><a class="footerItem" href="#"> Infos pratiques</a></li>
+        </ul>
+  
+        <ul class="footerSocialNetworks">
+          <a href="https://www.instagram.com/">
+            <i class="fab fa-instagram fa-3x footerItem"></i>
+          </a>
+          <a href="https://twitter.com/?lang=fr">
+            <i class="fab fa-twitter fa-3x footerItem"></i>
+          </a>
+          <a href="https://www.facebook.com/">
+            <i class="fab fa-facebook-f fa-3x footerItem"></i>
+          </a>
+        </ul>
+  
+        <div class="footerLogo">
+          <img
+            class="footerLogoImage"
+            src="https://placekitten.com/232/300"
+            alt="logo"
+          />
+        </div>
+      </footer>
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"
+  ></script>
+    <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous">
+</script>
 </body>
 </html>
