adding script in home.html

--- a/html/home.html
+++ b/html/home.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta description="Tout savoir sur les 24H du Mans" />
+    <meta
+      author="Loic Bodolec, Anais Cotinet, Brice Mezerette et Nicolas Mercier"
+    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -207,7 +211,7 @@
         />
       </div>
     </footer>
-    <script src="./js/home.js"></script>
+    <script src="../js/home.js"></script>
     <script
       src="https://kit.fontawesome.com/53b1999fd0.js"
       crossorigin="anonymous"
