payement validation with an alert

--- a/html/home.html
+++ b/html/home.html
@@ -97,7 +97,9 @@
               <p class="total">Total :</p>
               <p id="result" class="result"></p>
             </div>
-            <button type="submit" class="form-submit">Payer</button>
+            <button id="ticketing-submit" type="submit" class="form-submit">
+              Payer
+            </button>
           </div>
         </div>
       </form>
