--- a/history.html
+++ b/history.html
@@ -67,7 +67,7 @@
 
     <div class="main-container">
       <div class="box-1">
-        <h2><!-- <span class="iconify" data-inline="false" data-icon="ion:car-sport-outline"></span> --><img class="history-icons" src="./images/history-racecar.png"/>   La création</h2>
+        <h2><i class="fas fa-car"></i>   La création</h2>
         <p>En 1920, l'Automobile Club de l'Ouest, en particulier par son secrétaire général Georges Durand, œuvre à la réalisation d'une compétition dont le caractère devait contribuer à l'évolution du progrès technique et favoriser l'essor de l'automobile.</p>
         <div class="mobile-hidden">
         <p>En 1922, le club annonce la création d'un nouveau type de compétition dans la Sarthe, une épreuve d'endurance, alors que le Bol d'or automobile vient tout juste d'être créé. Pendant l'épreuve, des équipages de deux pilotes par voiture se relaieraient jour et nuit. 
@@ -81,7 +81,7 @@
       </div>
 
       <div class="box-3">
-        <h2><!-- <span class="iconify" data-inline="false" data-icon="whh:raceflag"></span> --><img class="history-icons" src="./images/history-raceflag.png"/>  Le circuit</h2>
+        <h2><i class="fas fa-flag-checkered"></i>  Le circuit</h2>
         <p>Le circuit des 24 Heures, en forme longue circuit des 24 Heures du Mans, dit aussi « circuit de la Sarthe », situé au sud de la ville du Mans et sur la commune de Mulsanne, dans la Sarthe en France, est un circuit de course automobile non permanent utilisé par la plus célèbre des courses d'endurance, les 24 Heures du Mans, organisée par l'Automobile Club de l'Ouest (ACO) depuis 1923.</p>
         <div class="mobile-hidden">
         <p>Il est aussi utilisé par les voitures de course anciennes lors du Mans Classic qui a lieu une fois tous les deux ans ainsi que par la Michelin Le Mans Cup. L'origine du circuit est lié au Grand Prix automobile de France 1906 et aux courses effectuées dès 1884 sur la célèbre ligne droite des Hunaudières par l'Union Vélocipédique de la Sarthe lors desquelles s'affrontaient les frères Bollée. Il ne doit pas être confondu avec le circuit Bugatti, tracé permanent avec lequel il partage les stands et une brève portion de piste depuis le virage du raccordement jusqu'au virage de la chapelle.</p>
@@ -95,7 +95,7 @@
       </div>
 
       <div class="box-5">
-        <h2><!-- <span class="iconify" data-inline="false" data-icon="ic:baseline-construction"></span> --><img class="history-icons" src="./images/history-tools.png"/>  Les innovations techniques</h2>
+        <h2><i class="fas fa-tools"></i>  Les innovations techniques</h2>
         <p>La course a servi d'expérimentation à de nombreux projets. Depuis le début, les équipes concurrentes ont innové. Le frein à disque, la jante, l'aérodynamisme, le pneu à carcasse radiale, le phare à LEDs, puis au laser, font partie des innovations testées au Mans.</p> 
         <div class="mobile-hidden">
         <p>Différents types de moteurs ont été utilisés pour gagner autant en vitesse qu'en consommation. La suralimentation commença dès 1929, longtemps avant la turbo compression, en 1974. En 1963, une auto expérimenta une turbine à gaz, alors qu'en 1970 était présenté le moteur rotatif.</p>
