changing font awesome kit

--- a/html/contact.html
+++ b/html/contact.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
     <script
-      src="https://kit.fontawesome.com/b168343220.js"
+      src="https://kit.fontawesome.com/b22c85a902.js"
       crossorigin="anonymous"
     ></script>
     <title>Contact | 24H</title>
@@ -28,7 +28,7 @@
   <body>
     <!-- navbar  -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-title" href="#">24H</a>
+      <a class="navbar-title" href="home.html">24H</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -42,14 +42,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav navbar-content">
-          <a class="nav-link text-right" href="#"
+          <a class="nav-link text-right" href="home.html"
             >Accueil <span class="sr-only">(current)</span></a
           >
           <a class="nav-link text-right" href="#">Histoire</a>
           <a class="nav-link text-right" href="#">Edition 2020</a>
-          <a class="nav-link text-right" href="../html/contact.html"
-            >Infos pratiques</a
-          >
+          <a class="nav-link text-right" href="contact.html">Infos pratiques</a>
         </div>
       </div>
     </nav>
@@ -190,7 +188,7 @@
         <li><a class="footerItem" href="#"> Edition 2020</a></li>
         <li class="footerItemSeparator">|</li>
         <li>
-          <a class="footerItem" href="../html/contact.html"> Infos pratiques</a>
+          <a class="footerItem" href="contact.html"> Infos pratiques</a>
         </li>
       </ul>
 
