--- a/html/home.html
+++ b/html/home.html
@@ -22,7 +22,7 @@
   <body>
     <!-- navbar  -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-title" href="#">24H</a>
+      <a class="navbar-title" href="home.html">24H</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -36,11 +36,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav navbar-content">
-          <a class="nav-link text-right" href="#"
+          <a class="nav-link text-right" href="home.html"
             >Accueil <span class="sr-only">(current)</span></a
           >
-          <a class="nav-link text-right" href="history.html">Histoire</a>
-          <a class="nav-link text-right" href="edition.html">Edition 2020</a>
+          <a class="nav-link text-right" href="">Histoire</a>
+          <a class="nav-link text-right" href="">Edition 2020</a>
           <a class="nav-link text-right" href="contact.html">Infos pratiques</a>
         </div>
       </div>
@@ -186,9 +186,9 @@
       <ul class="footerMenu">
         <li><a class="footerItem" href="home.html">Accueil</a></li>
         <li class="footerItemSeparator">|</li>
-        <li><a class="footerItem" href="history.html"> Histoire</a></li>
+        <li><a class="footerItem" href=""> Histoire</a></li>
         <li class="footerItemSeparator">|</li>
-        <li><a class="footerItem" href="edition.html"> Edition 2020</a></li>
+        <li><a class="footerItem" href=""> Edition 2020</a></li>
         <li class="footerItemSeparator">|</li>
         <li><a class="footerItem" href="contact.html"> Infos pratiques</a></li>
       </ul>
@@ -215,7 +215,7 @@
     </footer>
     <script src="../js/home.js"></script>
     <script
-      src="https://kit.fontawesome.com/53b1999fd0.js"
+      src="https://kit.fontawesome.com/b22c85a902.js"
       crossorigin="anonymous"
     ></script>
     <script
