--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,6 @@
     />
     <link rel="stylesheet" href="style-contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/b168343220.js" crossorigin="anonymous"></script>
     <title>Contact | 24H</title>
 </head>
 <body>
@@ -60,15 +59,19 @@
 
      <!-- location : map & info -->
     <section class="blocLocation">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2671.985463080106!2d0.2056818156426801!3d47.95600517920942!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e28fad5242c195%3A0xe9ae326c6c02c174!2sCircuit%20des%2024%20Heures%20du%20Mans!5e0!3m2!1sfr!2sfr!4v1601459914712!5m2!1sfr!2sfr" width="100%" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2671.985463080106!2d0.2056818156426801!3d47.95600517920942!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e28fad5242c195%3A0xe9ae326c6c02c174!2sCircuit%20des%2024%20Heures%20du%20Mans!5e0!3m2!1sfr!2sfr!4v1601459914712!5m2!1sfr!2sfr"  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <section class="locationContainer">
             <h2>COORDONNÉES</h2>
+            <p>Place Luigi Chinetti, 72019 Le Mans</p>
             <div class="location">
-                <p>Place Luigi Chinetti, 72019 Le Mans</p>
-                <i class="fas fa-phone-alt"></i>
-                <a  class="locationTel" href="tel:+33243402424">0243402424</a> 
+                <div class="locationTel">
+                  <i class="fas fa-phone-alt"></i>
+                  <a  class="contactLinks"  href="tel:+33243402424">0243402424</a> 
+                </div>
+               <div>
                 <i class="fas fa-envelope"></i>
-                <a href="mailto:hello24h@teambolides.com">hello24h@teambolides.com</a>
+                <a class="contactLinks" href="mailto:hello24h@teambolides.com">hello24h@teambolides.com</a>
+               </div>
              </div>
          </section>
     </section>
@@ -80,7 +83,7 @@
                 <img class="cardHotelImg" src="images/hotel_room1.png" alt="hotel 1">
                 <div class="cardHotelInfo">
                     <p>Brit Hôtel Le Cottage</p>
-                    <button class="infoButton" onclick="window.open('https://hotel-le-mans-cottage.brithotel.fr');">Voir le site web</button>
+                    <button class="infoButton" onclick="window.open('https://hotel-le-mans-cottage.brithotel.fr');">Réserver</button>
                 </div >
                 <div class="cardHotelIcons">
                     <i class="fas fa-utensils fa-sm"></i>
@@ -92,7 +95,7 @@
                 <img class="cardHotelImg" src="images/hotel_room2.png" alt="hotel 2">
                 <div class="cardHotelInfo">
                     <p>Cabane du circuit</p>
-                    <button class="infoButton" onclick="window.open('https://hotel-le-mans-cottage.brithotel.fr');">Voir le site web</button>
+                    <button class="infoButton" onclick="window.open('https://hotel-le-mans-cottage.brithotel.fr');">Réserver</button>
                 </div>
                 <div class="cardHotelIcons">
                     <i class="fas fa-utensils fa-sm"></i>
@@ -104,7 +107,7 @@
                 <img class="cardHotelImg" src="images/hotel_room1.png" alt="hotel 3">
                 <div class="cardHotelInfo">
                     <p>Cabane du circuit</p>
-                    <button class="infoButton" onclick="window.open('https://hotel-le-mans-cottage.brithotel.fr');">Voir le site web</button>
+                    <button class="infoButton" onclick="window.open('https://hotel-le-mans-cottage.brithotel.fr');">Réserver</button>
                 </div>
                 <div class="cardHotelIcons">
                     <i class="fas fa-utensils fa-sm"></i>
@@ -161,5 +164,6 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous">
 </script>
+<script src="https://kit.fontawesome.com/b168343220.js" crossorigin="anonymous"></script>
 </body>
 </html>
