changing folder structure

--- a/html/home.html
+++ b/html/home.html
@@ -39,7 +39,7 @@
           <a class="nav-link text-right" href="home.html"
             >Accueil <span class="sr-only">(current)</span></a
           >
-          <a class="nav-link text-right" href="">Histoire</a>
+          <a class="nav-link text-right" href="history.html">Histoire</a>
           <a class="nav-link text-right" href="">Edition 2020</a>
           <a class="nav-link text-right" href="contact.html">Infos pratiques</a>
         </div>
@@ -186,7 +186,7 @@
       <ul class="footerMenu">
         <li><a class="footerItem" href="home.html">Accueil</a></li>
         <li class="footerItemSeparator">|</li>
-        <li><a class="footerItem" href=""> Histoire</a></li>
+        <li><a class="footerItem" href="history.html"> Histoire</a></li>
         <li class="footerItemSeparator">|</li>
         <li><a class="footerItem" href=""> Edition 2020</a></li>
         <li class="footerItemSeparator">|</li>
