--- a/html/contact.html
+++ b/html/contact.html
@@ -19,10 +19,6 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/b22c85a902.js"
-      crossorigin="anonymous"
-    ></script>
     <title>Contact | 24H</title>
   </head>
   <body>
@@ -45,7 +41,7 @@
           <a class="nav-link text-right" href="home.html"
             >Accueil <span class="sr-only">(current)</span></a
           >
-          <a class="nav-link text-right" href="#">Histoire</a>
+          <a class="nav-link text-right" href="history.html">Histoire</a>
           <a class="nav-link text-right" href="#">Edition 2020</a>
           <a class="nav-link text-right" href="contact.html">Infos pratiques</a>
         </div>
@@ -183,7 +179,7 @@
       <ul class="footerMenu">
         <li><a class="footerItem" href="home.html">Accueil</a></li>
         <li class="footerItemSeparator">|</li>
-        <li><a class="footerItem" href="#"> Histoire</a></li>
+        <li><a class="footerItem" href="history.html"> Histoire</a></li>
         <li class="footerItemSeparator">|</li>
         <li><a class="footerItem" href="#"> Edition 2020</a></li>
         <li class="footerItemSeparator">|</li>
@@ -212,6 +208,10 @@
         />
       </div>
     </footer>
+    <script
+      src="https://kit.fontawesome.com/b22c85a902.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
