--- a/history.html
+++ b/history.html
@@ -95,7 +95,7 @@
       </div>
 
       <div class="box-5">
-        <h2><i class="fas fa-tools"></i>  Les innovations techniques</h2>
+        <h2><i class="fas fa-tools"></i>  Les innovations</h2>
         <p>La course a servi d'expérimentation à de nombreux projets. Depuis le début, les équipes concurrentes ont innové. Le frein à disque, la jante, l'aérodynamisme, le pneu à carcasse radiale, le phare à LEDs, puis au laser, font partie des innovations testées au Mans.</p> 
         <div class="mobile-hidden">
         <p>Différents types de moteurs ont été utilisés pour gagner autant en vitesse qu'en consommation. La suralimentation commença dès 1929, longtemps avant la turbo compression, en 1974. En 1963, une auto expérimenta une turbine à gaz, alors qu'en 1970 était présenté le moteur rotatif.</p>
