making footer sticky

--- a/html/contact.html
+++ b/html/contact.html
@@ -175,7 +175,7 @@
         </section>
       </section>
     </main>
-    <footer>
+    <footer class="fixed-bottom">
       <ul class="footerMenu">
         <li><a class="footerItem" href="home.html">Accueil</a></li>
         <li class="footerItemSeparator">|</li>
