--- a/html/history.html
+++ b/html/history.html
@@ -187,7 +187,7 @@
     </section>
 
     <!-- footer -->
-    <footer>
+    <footer class="fixed-bottom">
       <ul class="footerMenu">
         <li><a class="footerItem" href="home.html">Accueil</a></li>
         <li class="footerItemSeparator">|</li>
