--- a/html/home.html
+++ b/html/home.html
@@ -122,7 +122,7 @@
                 Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem
                 ipsum dolor sit amet Lorem ipsum dolor sit amet
               </p>
-              <a href="" class="btn news-btn">Voir plus</a>
+              <a href="news.html" class="btn news-btn">Voir plus</a>
             </div>
           </div>
         </article>
@@ -139,7 +139,7 @@
                 Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem
                 ipsum dolor sit amet Lorem ipsum dolor sit amet
               </p>
-              <a href="" class="btn news-btn">Voir plus</a>
+              <a href="news.html" class="btn news-btn">Voir plus</a>
             </div>
           </div>
         </article>
@@ -156,7 +156,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing Lorem ipsum
                 dolor sit amet, consectetur adipiscing
               </p>
-              <a href="" class="btn news-btn">Voir plus</a>
+              <a href="news.html" class="btn news-btn">Voir plus</a>
             </div>
           </div>
         </article>
@@ -182,7 +182,7 @@
     </div>
 
     <!-- footer -->
-    <footer class="bg-dark">
+    <footer class="fixed-bottom">
       <ul class="footerMenu">
         <li><a class="footerItem" href="home.html">Accueil</a></li>
         <li class="footerItemSeparator">|</li>
