adding content and style to news page

--- a/html/news.html
+++ b/html/news.html
@@ -17,6 +17,7 @@
     href=“https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap”
     rel=“stylesheet”>
     <link rel="stylesheet" href="../css/style-home.css" />
+    <link rel="stylesheet" href="../css/style-news.css" />
     <title>Actualités | 24H</title>
   </head>
   <body>
@@ -48,11 +49,50 @@
 
     <!-- news -->
     <section class="news">
-      <h2 class="news-title">ACTUALITÉS</h2>
+      <h2 class="news-title">Edition 2021</h2>
+      <p class="news-subtitle">Les dates</p>
+      <p class="news-content">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit
+        quam consectetur quidem nam nihil fuga explicabo magni vitae eligendi
+        ipsam ex aspernatur saepe adipisci ea incidunt mollitia, sint at!
+        Laudantium? Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Reprehenderit quam consectetur quidem nam nihil fuga explicabo magni
+        vitae eligendi ipsam ex aspernatur saepe adipisci ea incidunt mollitia,
+        sint at! Laudantium? Lorem ipsum dolor, sit amet consectetur adipisicing
+        elit. Reprehenderit quam consectetur quidem nam nihil fuga explicabo
+        magni vitae eligendi ipsam ex aspernatur saepe adipisci ea incidunt
+        mollitia, sint at! Laudantium?
+      </p>
+      <p class="news-subtitle">Les nouveautés</p>
+      <p class="news-content">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit
+        quam consectetur quidem nam nihil fuga explicabo magni vitae eligendi
+        ipsam ex aspernatur saepe adipisci ea incidunt mollitia, sint at!
+        Laudantium? Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Reprehenderit quam consectetur quidem nam nihil fuga explicabo magni
+        vitae eligendi ipsam ex aspernatur saepe adipisci ea incidunt mollitia,
+        sint at! Laudantium? Lorem ipsum dolor, sit amet consectetur adipisicing
+        elit. Reprehenderit quam consectetur quidem nam nihil fuga explicabo
+        magni vitae eligendi ipsam ex aspernatur saepe adipisci ea incidunt
+        mollitia, sint at! Laudantium?
+      </p>
+      <p class="news-subtitle">Boutiques officielle</p>
+      <p class="news-content">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit
+        quam consectetur quidem nam nihil fuga explicabo magni vitae eligendi
+        ipsam ex aspernatur saepe adipisci ea incidunt mollitia, sint at!
+        Laudantium? Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Reprehenderit quam consectetur quidem nam nihil fuga explicabo magni
+        vitae eligendi ipsam ex aspernatur saepe adipisci ea incidunt mollitia,
+        sint at! Laudantium? Lorem ipsum dolor, sit amet consectetur adipisicing
+        elit. Reprehenderit quam consectetur quidem nam nihil fuga explicabo
+        magni vitae eligendi ipsam ex aspernatur saepe adipisci ea incidunt
+        mollitia, sint at! Laudantium?
+      </p>
     </section>
 
     <!-- footer -->
-    <footer class="fixed-bottom">
+    <footer>
       <ul class="footerMenu">
         <li><a class="footerItem" href="home.html">Accueil</a></li>
         <li class="footerItemSeparator">|</li>
@@ -83,7 +123,6 @@
         />
       </div>
     </footer>
-    <script src="../js/home.js"></script>
     <script
       src="https://kit.fontawesome.com/b22c85a902.js"
       crossorigin="anonymous"
