--- a/html/home.html
+++ b/html/home.html
@@ -182,7 +182,7 @@
     </div>
 
     <!-- footer -->
-    <footer>
+    <footer id="footer">
       <ul class="footerMenu">
         <li><a class="footerItem" href="home.html">Accueil</a></li>
         <li class="footerItemSeparator">|</li>
