MAJ padding/margin et échelle images en mobile

--- a/html/history.html
+++ b/html/history.html
@@ -104,7 +104,7 @@
       </div>
 
       <div class="box-5">
-        <h2><i class="fas fa-tools"></i> Les innovations techniques</h2>
+        <h2><i class="fas fa-tools"></i> Les innovations</h2>
         <p>
           La course a servi d'expérimentation à de nombreux projets. Depuis le début, les équipes concurrentes ont innové. Le frein à disque, la jante, l'aérodynamisme, le pneu à carcasse radiale, le phare à LEDs, puis au laser, font partie des innovations testées au Mans.
         </p>
