MAJ header application de la classe main-banner

--- a/html/history.html
+++ b/html/history.html
@@ -43,7 +43,7 @@
     </nav>
 
     <!-- banner -->
-    <header>
+    <header class="main-banner">
       <img
         class="header-img"
         src="../images/history_bannière.jpg"
