MAJ bouton Voir plus en version mobile avec du JS

--- a/html/history.html
+++ b/html/history.html
@@ -43,7 +43,7 @@
     </nav>
 
     <!-- banner -->
-    <header class="main-banner">
+    <header class="history-banner">
       <img
         class="header-img"
         src="../images/history_bannière.jpg"
@@ -66,7 +66,7 @@
             Aujourd'hui, les « 24 Heures du Mans » ont lieu chaque année en juin. C'est la plus ancienne et la plus prestigieuse des courses d'endurance pour automobile de sport et Sport-prototypes, elle fait partie à ce titre des différentes triples couronnes du sport automobile.
           </p>
         </div>
-        <button id="togg1" class="btn history-btn">Voir plus</button>
+        <input type="button" id="togg1" class="btn history-btn" value="Voir plus">
       </div>
       <div class="box-2">
         <img
@@ -92,7 +92,7 @@
             En 1990, la ligne droite des Hunaudières, d'une longueur de presque six kilomètres, est divisée en trois portions par la réalisation de deux chicanes qui ont pour but de limiter la recherche de vitesse maximale par des réductions d'appuis aérodynamiques trop importantes et de limiter par conséquent les différences de vitesse entre concurrents. L'envol de certains véhicules était dû à la géométrie de la piste avec un changement de plan qui pouvait créer un décrochage aérodynamique suivant leurs configurations et réglages aérodynamiques. La bosse a été aplanie pour l'édition 2001.
           </p>
         </div>
-        <button id="togg2" class="btn history-btn">Voir plus</button>
+        <input type="button" id="togg2" class="btn history-btn" value="Voir plus">
       </div>
 
       <div class="box-4">
@@ -122,7 +122,7 @@
             Par ailleurs, la ligne droite des Hunaudières est décrétée « laboratoire national » en 1932 par les Ponts et chaussées et, en 1933, la ligne médiane des routes françaises y est testée.
           </p>
         </div>
-        <button id="togg3" class="btn history-btn">Voir plus</button>
+        <input type="button" id="togg3" class="btn history-btn" value="Voir plus">
       </div>
 
       <div class="box-6">
