moving modal keyframes

--- a/html/home.html
+++ b/html/home.html
@@ -139,7 +139,7 @@
               alt="Actualités 1"
             />
             <div class="card-body">
-              <h5 class="card-title">lorem ipsum</h5>
+              <h5 class="card-title">Lorem ipsum</h5>
               <p class="card-text">
                 Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem
                 ipsum dolor sit amet Lorem ipsum dolor sit amet
@@ -156,7 +156,7 @@
               alt="Actualités 2"
             />
             <div class="card-body">
-              <h5 class="card-title">lorem ipsum</h5>
+              <h5 class="card-title">Lorem ipsum</h5>
               <p class="card-text">
                 Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem
                 ipsum dolor sit amet Lorem ipsum dolor sit amet
