removing lorem content and adding style to cards

--- a/html/home.html
+++ b/html/home.html
@@ -112,15 +112,32 @@
         <article class="article">
           <div class="card">
             <img
-              src="../images/race4.jpg"
+              src="../images/crowd.jpg"
               class="card-img-top"
-              alt="Actualités 1"
+              alt="Les chiffres de l'édition 2020"
             />
             <div class="card-body">
-              <h5 class="card-title">lorem ipsum</h5>
+              <h5 class="card-title">Les chiffres de l'édition 2020</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem
-                ipsum dolor sit amet Lorem ipsum dolor sit amet
+                Malgré l'épidémie, 2020 aura encore été une belle année pour les
+                24. Retour en quelques chiffres sur cette édition.
+              </p>
+              <a href="news.html" class="btn news-btn">Voir plus</a>
+            </div>
+          </div>
+        </article>
+        <article class="article">
+          <div class="card">
+            <img
+              src="../images/pilote.jpg"
+              class="card-img-top"
+              alt="Interview - LOUIS DELETRAZ"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Interview - LOUIS DELETRAZ</h5>
+              <p class="card-text">
+                Pour ses premières 24 Heures du Mans, Louis Deletraz s’est
+                classé quatrième du classement général.
               </p>
               <a href="news.html" class="btn news-btn">Voir plus</a>
             </div>
@@ -131,30 +148,15 @@
             <img
               src="../images/race4.jpg"
               class="card-img-top"
-              alt="Actualités 2"
+              alt="Exposition 917 - une saga en 7 voitures"
             />
             <div class="card-body">
-              <h5 class="card-title">lorem ipsum</h5>
+              <h5 class="card-title">
+                Exposition 917 - une saga en 7 voitures
+              </h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem
-                ipsum dolor sit amet Lorem ipsum dolor sit amet
-              </p>
-              <a href="news.html" class="btn news-btn">Voir plus</a>
-            </div>
-          </div>
-        </article>
-        <article class="article">
-          <div class="card">
-            <img
-              src="../images/race2.jpg"
-              class="card-img-top"
-              alt="Actualités 3"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Lorem ipsum</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing Lorem ipsum
-                dolor sit amet, consectetur adipiscing
+                L’exposition 917 1970 Made for Le Mans rassemble sept châssis
+                emblématiques de l’histoire de la Porsche 917
               </p>
               <a href="news.html" class="btn news-btn">Voir plus</a>
             </div>
