editing of meta & js function fix

--- a/html/contact.html
+++ b/html/contact.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta description="Les 24H du Mans" />
-    <meta
-      author="Brice Mezerette, Anais Cotinet, Loic Bodolec, Nicolas Mercier"
-    />
+    <meta name="description" content="Contact et informations pratiques sur le circuit et les logements autour." />
+    <meta name="author" content="Loic Bodolec, Anais Cotinet, Brice Mezerette et Nicolas Mercier"/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
