--- a/html/home.html
+++ b/html/home.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta description="Tout savoir sur les 24H du Mans" />
-    <meta
-      author="Loic Bodolec, Anais Cotinet, Brice Mezerette et Nicolas Mercier"
-    />
+    <meta name="description" content="Acheter ses billets et tout savoir sur les 24H du Mans, son histoire, les actualités et les résultats de la dernière édition." />
+    <meta name="author" content="Loic Bodolec, Anais Cotinet, Brice Mezerette et Nicolas Mercier"/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -15,7 +13,7 @@
     />
     <link
     href=“https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap”
-    rel=“stylesheet”>
+    rel=“stylesheet” />
     <link rel="stylesheet" href="../css/style-home.css" />
     <title>Accueil | 24H</title>
   </head>
@@ -64,7 +62,7 @@
             <label for="fName">Prénom :</label>
             <input type="text" name="fname" id="fName" placeholder="Jean"/>
             <label for="mailAdress">Email :</label>
-            <input type="mail" name="email" id="mailAdress" placeholder="jean@mail.com"/>
+            <input type="email" name="email" id="mailAdress" placeholder="jean@mail.com"/>
             <label class="newsletter-check">
               <input type="checkbox" checked="checked" name="subscribe"> J'accepte de recevoir les offres des partenaires
             </label>
