--- a/html/news.html
+++ b/html/news.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta description="Tout savoir sur les 24H du Mans" />
-    <meta
-      author="Loic Bodolec, Anais Cotinet, Brice Mezerette et Nicolas Mercier"
-    />
+    <meta name="description" content="Retour sur la dernière édition des 24H du Mans." />
+    <meta name="author" content="Loic Bodolec, Anais Cotinet, Brice Mezerette et Nicolas Mercier"/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -15,7 +13,7 @@
     />
     <link
     href=“https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap”
-    rel=“stylesheet”>
+    rel=“stylesheet”/>
     <link rel="stylesheet" href="../css/style-home.css" />
     <link rel="stylesheet" href="../css/style-news.css" />
     <title>Actualités | 24H</title>
