correction of modal css and other details

--- a/html/home.html
+++ b/html/home.html
@@ -55,13 +55,8 @@
       <h1 class="header-title">LES 24H DU MANS</h1>
       <p class="header-text">Prepared to fight</p>
 
-      <!-- Modal Newsletter -->
-      <button
-        type="button"
-        class="newsletter-button"
-        data-toggle="modal"
-        data-target="#staticBackdrop"
-      >
+     <!-- Modal Newsletter -->
+      <button type="button" class="newsletter-button" data-toggle="modal" data-target="#staticBackdrop">
         S'INSCRIRE À LA NEWSLETTER
       </button>
 
@@ -71,24 +66,13 @@
           <h3>Inscription à la Newsletter</h3>
           <form class="newsletter-form">
             <label for="fName">Prénom :</label>
-            <input type="text" name="fname" id="fName" placeholder="Jean" />
+            <input type="text" name="fname" id="fName" placeholder="Jean"/>
             <label for="mailAdress">Email :</label>
-            <input
-              type="email"
-              name="email"
-              id="mailAdress"
-              placeholder="jean@mail.com"
-            />
+            <input type="email" name="email" id="mailAdress" placeholder="jean@mail.com"/>
             <label class="newsletter-check">
-              <input type="checkbox" checked="checked" name="subscribe" />
-              J'accepte de recevoir les offres des partenaires
+              <input type="checkbox" checked="checked" name="subscribe"> J'accepte de recevoir les offres des partenaires
             </label>
-            <input
-              type="submit"
-              name="inscription"
-              id="contactSend"
-              value="JE M'INSCRIS"
-            />
+            <input type="submit" name="inscription" id="inscriptionSend" value="JE M'INSCRIS" />
           </form>
         </div>
       </div>
