--- a/html/contact.html
+++ b/html/contact.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Contact | 24H</title>
+    <title>Infos Pratiques | 24H</title>
   </head>
   <body>
     <!-- navbar  -->
