--- a/html/contact.html
+++ b/html/contact.html
@@ -204,6 +204,7 @@
         />
       </div>
     </footer>
+    <script src="../js/contact.js"></script>
     <script
       src="https://kit.fontawesome.com/b22c85a902.js"
       crossorigin="anonymous"
