desktop version of the footer

--- a/html/home.html
+++ b/html/home.html
@@ -239,10 +239,18 @@
 
       <ul class="footerList">
         <li class="footerList-title">Partenaires</li>
-        <li><a class="footerItem" href="">Rolex</a></li>
-        <li><a class="footerItem" href="history.html">Le Mans Métropole</a></li>
-        <li><a class="footerItem" href="">Département de la Sarthe</a></li>
-        <li><a class="footerItem" href="contact.html">MMA</a></li>
+        <li><a class="footerItem" href="https://www.rolex.com/fr">Rolex</a></li>
+        <li>
+          <a class="footerItem" href="http://www.lemansmetropole.fr/"
+            >Le Mans Métropole</a
+          >
+        </li>
+        <li>
+          <a class="footerItem" href="https://www.sarthe.fr/"
+            >Département de la Sarthe</a
+          >
+        </li>
+        <li><a class="footerItem" href="https://www.mma.fr/">MMA</a></li>
       </ul>
 
       <hr />
@@ -251,7 +259,7 @@
         <li class="footerList-legal-title">Légales</li>
         <li class="footerList-legal">Photo credits Pixabay</li>
         <li class="footerList-legal">
-          © 2020 Brice Mezerette, Loïc Bodolec, Nicolas Mercier
+          © 2020 Brice Mezerette, Loïc Bodolec, Anais Cotinet, Nicolas Mercier
         </li>
       </ul>
 
