alt hotel modification

--- a/html/contact.html
+++ b/html/contact.html
@@ -117,7 +117,7 @@
             <img
               class="cardHotelImg"
               src="../images/hotel_room1.png"
-              alt="hotel 1"
+              alt="Brit Hôtel le Cottage"
             />
             <div class="cardHotelInfo">
               <p>Brit Hôtel Le Cottage</p>
@@ -138,7 +138,7 @@
             <img
               class="cardHotelImg"
               src="../images/hotel_room2.png"
-              alt="hotel 2"
+              alt="Hôtel Cabane du Circuit"
             />
             <div class="cardHotelInfo">
               <p>Cabane du circuit</p>
@@ -159,10 +159,10 @@
             <img
               class="cardHotelImg"
               src="../images/hotel_room1.png"
-              alt="hotel 3"
+              alt="Hêtel H24 hôtel"
             />
             <div class="cardHotelInfo">
-              <p>H24 HOTEL</p>
+              <p>H24 Hôtel</p>
               <button
                 class="infoButton"
                 onclick="window.open('https://hotel-le-mans-cottage.brithotel.fr');"
