--- a/html/news.html
+++ b/html/news.html
@@ -45,7 +45,9 @@
             >Accueil <span class="sr-only">(current)</span></a
           >
           <a class="nav-link text-right" href="history.html">Histoire</a>
-          <a class="nav-link text-right" href="">Edition 2020</a>
+          <a class="nav-link text-right" href="../palmères/palm.html"
+            >Edition 2020</a
+          >
           <a class="nav-link text-right" href="contact.html">Infos pratiques</a>
         </div>
       </div>
@@ -133,7 +135,9 @@
         <li class="footerList-title">Navigation</li>
         <li><a class="footerItem" href="home.html">Accueil</a></li>
         <li><a class="footerItem" href="history.html"> Histoire</a></li>
-        <li><a class="footerItem" href=""> Edition 2020</a></li>
+        <li>
+          <a class="footerItem" href="../palmères/palm.html"> Edition 2020</a>
+        </li>
         <li><a class="footerItem" href="contact.html"> Infos pratiques</a></li>
       </ul>
 
