fixing style and adding a title in history page

--- a/html/history.html
+++ b/html/history.html
@@ -17,7 +17,7 @@
     href=“https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap”
     rel=“stylesheet”>
     <link rel="stylesheet" href="../css/style-home.css" />
-    <title>Document</title>
+    <title>Histoire | 24H</title>
   </head>
   <body>
     <!-- navbar  -->
@@ -50,7 +50,7 @@
 
     <!-- banner -->
     <header class="history-banner">
-      <h1 class="header-title">L'histoire des 24h</h1>
+      <h1 class="header-title">L'HISTOIRE DES 24h</h1>
     </header>
 
     <div class="main-container">
